--- a/api/pom.xml
+++ b/api/pom.xml
@@ -2,13 +2,12 @@
   <parent>
     <artifactId>myfaces-core-project</artifactId>
     <groupId>org.apache.myfaces.core</groupId>
-    <version>1.1.3</version>
+    <version>1.1.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-api</artifactId>
   <name>API</name>
-  <version>1.1.3</version>
   <description>The MyFaces API Subproject provides a full set of the API interfaces and classes
     defined in JSR-127 (see also http://www.jcp.org/en/jsr/detail?id=127).</description>
   <scm>
