--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -2,13 +2,12 @@
   <parent>
     <artifactId>myfaces-core-project</artifactId>
     <groupId>org.apache.myfaces.core</groupId>
-    <version>1.1.3</version>
+    <version>1.1.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-impl</artifactId>
   <name>Impl</name>
-  <version>1.1.3</version>
   <description>This is the MyFaces Impl Subproject Description [INSERT MORE STUFF HERE]</description>
   <url>http://myfaces.apache.org</url>
   <scm>
@@ -229,9 +228,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.myfaces.core</groupId>
+      <groupId>myfaces</groupId>
       <artifactId>myfaces-api</artifactId>
-      <version>1.1.3</version>
+      <version>1.1.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
