--- a/pom.xml
+++ b/pom.xml
@@ -9,16 +9,16 @@
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
   <name>Core Project</name>
-  <version>1.1.3-SNAPSHOT</version>
+  <version>1.1.3</version>
   <url>http://myfaces.apache.org/projects</url>
   <issueManagement>
     <system>jira</system>
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk</developerConnection>
-    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/trunk</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/tags/1_1_3</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/tags/1_1_3</developerConnection>
+    <url>http://svn.apache.org/viewcvs.cgi/myfaces/core/tags/1_1_3</url>
   </scm>
   <modules>
     <module>api</module>
@@ -26,24 +26,20 @@
   </modules>
   <repositories>
     <repository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots />
       <id>apache-maven-snapshots</id>
       <url>http://cvs.apache.org/maven-snapshot-repository</url>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
     </repository>
     <repository>
-      <id>myfaces-repo</id>
-      <url>http://myfaces.zones.apache.org/dist/maven-repository</url>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
+      <releases />
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
+      <id>myfaces-repo</id>
+      <url>http://myfaces.zones.apache.org/dist/maven-repository</url>
     </repository>
   </repositories>
 </project>
