--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -36,18 +36,21 @@
             </goals>
             <configuration>
               <artifactItems>
+
                 <artifactItem>
                   <groupId>org.apache.myfaces.core</groupId>
                   <artifactId>myfaces-api</artifactId>
                   <version>${version}</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
+
                 <artifactItem>
                   <groupId>org.apache.myfaces.core</groupId>
                   <artifactId>myfaces-impl</artifactId>
                   <version>${version}</version>
                   <classifier>javadoc</classifier>
                 </artifactItem>
+
                 <!--
                 TODO/CHECK: o.a.m.shared_impl.* javadoc automatically included?
                 <artifactItem>
@@ -85,16 +88,22 @@
             <id>copy-source</id>
             <phase>package</phase>
             <goals>
-              <goal>copy</goal>
+              <goal>unpack</goal>
             </goals>
             <configuration>
               <artifactItems>
+  							<artifactItem>
+                  <groupId>org.apache.myfaces.core</groupId>
+                  <artifactId>myfaces-api</artifactId>
+                  <version>${version}</version>
+								  <classifier>sources</classifier>
+                </artifactItem>
 
                 <artifactItem>
                   <groupId>org.apache.myfaces.core</groupId>
                   <artifactId>myfaces-impl</artifactId>
                   <version>${version}</version>
-                  <classifier>sources</classifier>
+		  						<classifier>sources</classifier>
                 </artifactItem>
 
                </artifactItems>
@@ -106,9 +115,12 @@
 
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <version>2.0.1</version>
         <configuration>
-          <descriptor>src/main/assembly/dep.xml</descriptor>
+	  			<descriptors>
+          	<descriptor>src/main/assembly/bin.xml</descriptor>
+	      		<descriptor>src/main/assembly/src.xml</descriptor>
+	  			</descriptors>
           <finalName>myfaces-core-${version}</finalName>
           <outputDirectory>target/assembly/out</outputDirectory>
           <workDirectory>target/assembly/work</workDirectory>
@@ -118,7 +130,7 @@
       <plugin>
         <groupId>org.apache.myfaces.maven</groupId>
         <artifactId>wagon-maven-plugin</artifactId>
-        <version>1.0.3-SNAPSHOT</version>
+        <version>1.0.4-SNAPSHOT</version>
         <configuration>
           <id>myfaces-nightly-builds</id>
           <url>scpexe://minotaur.apache.org/www/cvs.apache.org/builds/myfaces/nightly</url>
