--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -210,7 +210,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
-      <version>2.3</version>
+      <version>2.5</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -248,9 +248,7 @@
       <artifactId>commons-logging</artifactId>
       <version>1.0.4</version>
       <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>cactus</groupId>
+    </dependency>      <groupId>cactus</groupId>
       <artifactId>cactus</artifactId>
       <version>13-1.7.1</version>
       <scope>test</scope>
