--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
   </modules>
   <repositories>
     <repository>
+	<id>java.net</id>
+	<name>java.net Maven 1 Repository</name>
+	<url>https://maven-repository.dev.java.net/nonav/repository</url>
+	<layout>legacy</layout>
+    </repository>
+    <repository>
       <releases>
         <enabled>false</enabled>
       </releases>
