--- a/api/pom.xml
+++ b/api/pom.xml
@@ -109,9 +109,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
+      <groupId>javax.servlet.jsp</groupId>
       <artifactId>jsp-api</artifactId>
-      <version>2.0</version>
+      <version>2.1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
