--- a/api/pom.xml
+++ b/api/pom.xml
@@ -89,7 +89,13 @@
       </build>
     </profile>
   </profiles>
-  <dependencies> 
+  <dependencies>
+      <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jsp</artifactId>
+      <version>2.1-6.0.0beta15</version>
+      <scope>compile</scope>
+    </dependency>  
     <!-- 
     
     Download Glassfish http://java.sun.com/javaee/downloads/index.jsp
