--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -206,7 +206,13 @@
       </build>
     </profile>
   </profiles>
-  <dependencies>  
+  <dependencies>
+    <dependency>
+       <groupId>org.mortbay.jetty</groupId>
+       <artifactId>jsp-2.1</artifactId>
+       <version>6.0.0beta15</version>
+       <scope>provided</scope>
+    </dependency>
     <!-- 
     
     Download Glassfish http://java.sun.com/javaee/downloads/index.jsp
@@ -226,9 +232,9 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>myfaces</groupId>
+      <groupId>org.apache.myfaces.core</groupId>
       <artifactId>myfaces-api</artifactId>
-      <version>1.1.1</version>
+      <version>1.1.4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
