--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -3,20 +3,20 @@
   <parent>
     <groupId>org.apache.myfaces.core</groupId>
     <artifactId>myfaces-core-project</artifactId>
-    <version>1.2.4-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-impl</artifactId>
-  <name>Apache MyFaces JSF-1.2 Core Impl</name>
+  <name>Apache MyFaces JSF-2.0 Core Impl</name>
   <description>
-    The private implementation classes of the Apache MyFaces Core JSF/1.2 Implementation
+    The private implementation classes of the Apache MyFaces Core JSF-2.0 Implementation
   </description>
-  <url>http://myfaces.apache.org/core12/myfaces-impl</url>
+  <url>http://myfaces.apache.org/core20/myfaces-impl</url>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_1/impl</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0/impl</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0/impl</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0/impl</url>
   </scm>
   <build>
     <resources>
