--- a/pom.xml
+++ b/pom.xml
@@ -15,21 +15,21 @@
   <groupId>org.apache.myfaces.core</groupId>
   <artifactId>myfaces-core-project</artifactId>
   <packaging>pom</packaging>
-  <name>Apache MyFaces JSF-1.2 Core Project</name>
+  <name>Apache MyFaces JSF-2.0 Core Project</name>
   <description>
-    This project is the home of the MyFaces implementation of the JavaServer Faces 1.2 specification, and
+    This project is the home of the MyFaces implementation of the JavaServer Faces 2.0 specification, and
     consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes).
   </description>
-  <version>1.2.4-SNAPSHOT</version>
-  <url>http://myfaces.apache.org/core12</url>
+  <version>2.0.0-SNAPSHOT</version>
+  <url>http://myfaces.apache.org/core20</url>
   <issueManagement>
     <system>jira</system>
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/branches/2_0__x</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/branches/2_0__x</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/branches/2_0__x</url>
   </scm>
   <modules>
     <module>build</module>
