--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -507,7 +507,7 @@
   </reporting>
 
   <properties>
-    <myfaces-shared.version>2.0.8</myfaces-shared.version>
+    <myfaces-shared.version>2.0.9-SNAPSHOT</myfaces-shared.version>
   </properties>
 
 </project>
